# overlay-mcp

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  overlay-mcp.code-workspace
.cursor/rules/: bot.mdc  laern.mdc  learn-githubaction.mdc  learn-rs.mdc  learn-rust.mdc  mcp-authorization.mdc  overlay-mcp.mdc
.github/workflows/: create-release.yaml  prepare-release.yaml  release.yaml  release.yml
.mirrord/: mirrord.json
chats/: 2024-05-24_인증_상태코드_논의.md
crates/httpbuilder/: Cargo.toml
crates/httpbuilder/src/: builder.rs  errors.rs  http_reference.rs  lib.rs
crates/openfga/: Cargo.toml
crates/openfga/src/: errors.rs  lib.rs  models.rs  openfga.rs
crates/overlay-mcp-auth/: Cargo.toml
crates/overlay-mcp-auth/src/: authn_basic.rs  authz_fga.rs  authz_static.rs  lib.rs
crates/overlay-mcp-cli/: Cargo.toml
crates/overlay-mcp-cli/src/: command.rs  main.rs  run.rs  utils.rs
crates/overlay-mcp-core/: Cargo.toml
crates/overlay-mcp-core/src/: errors.rs  general.rs  guard.rs  lib.rs  mcp.rs  models.rs  stream.rs
crates/overlay-mcp-core/src/config/: application.rs  auth.rs  mod.rs  otel.rs  reqmodifier.rs  server.rs  upstream.rs
crates/overlay-mcp-raft/: Cargo.toml
crates/overlay-mcp-raft/src/: lib.rs  raft_schema.rs  session.rs  session_manager.rs
crates/overlay-mcp-resolver/: Cargo.toml
crates/overlay-mcp-resolver/src/: discovery_resolver.rs  lib.rs  static_resolver.rs
crates/overlay-mcp-session-manager/: Cargo.toml
crates/overlay-mcp-session-manager/src/: lib.rs
crates/overlay-mcp-standalone/: Cargo.toml
crates/overlay-mcp-standalone/src/: lib.rs  session.rs  session_manager.rs
crates/overlay-mcp-svr/: Cargo.toml
crates/overlay-mcp-svr/src/: lib.rs
crates/overlay-mcp-svr/src/middlewares/: auth.rs  mod.rs  reqwest.rs  resolver.rs  session.rs  trace.rs
crates/overlay-mcp-svr/src/router/: authorize.rs  message.rs  mod.rs  register.rs  sse.rs  token.rs
crates/overlay-mcp-svr/src/router/meta/: mod.rs
crates/overlay-mcp-svr/src/router/well_known/: mod.rs  oauth_authorization_server.rs
crates/overlay-mcp-svr/src/utils/: jsonrequest.rs  mod.rs
deploy/: Pulumi.dev.yaml  index.ts  package.json  pnpm-lock.yaml  run.sh
deploy/develope/: Pulumi.dev.yaml  Pulumi.yaml  package.json
docs/: authentication.md  authentication_flow.md  cli.md  configuration.md  fga.md  mcp_proxy.md  overview.md  server.md  storage.md  utils.md
examples/config/: config-constant.json  config-discover.json  config-embeded-jwk.json  config-fga.json  config-jwk-url.json  config-raft-0.json  config-raft-1.json  config-raft-2.json  config-raft.json  config.json
examples/openfga/: schema.fga
scripts/debugtools/: mcp-inspector.js  reverse-proxy.js
scripts/load-k6/: k6-prepare.sh  raft-read-n0-write-n1.js  simple-init.js  test.js
src/: command.rs  config.rs  config_loader.rs  config_upstream.rs  init.rs  main.rs  mcp.rs  oauth2_wellknown.rs
src/authorizer/: authorizer.rs  constant_authorizer.rs  core.rs  fga_authorizer.rs  mod.rs
src/fga/: mod.rs  schema.rs
src/handler/: handle_message.rs  handle_oauth2_auth.rs  handle_oauth2_client.rs  handle_oauth2_token.rs  handle_sse.rs  handle_wellknown_oauth2authorizationserver.rs  mod.rs  state.rs  utils.rs
src/handler/handle_mcp/: handle_entrypoint.rs  handle_http_sse.rs  handle_streamable_http.rs  mod.rs
src/manager/: local_session.rs  mod.rs  raft_session.rs
src/manager/auth/: authenticate.rs  authorizer.rs  authorizer_constant.rs  authorizer_fga.rs  commons.rs  config.rs  mod.rs
src/manager/resolver/: mod.rs
src/manager/storage/: dto.rs  guard.rs  local_state.rs  manager.rs  mod.rs  raft_state.rs  session.rs  state.rs
src/mcp/: middleware.rs  mod.rs  specification.rs  tunnel.rs
src/middleware/: apikey_extractor.rs  jwt_extractor.rs  mcp_protocol_version.rs  mcp_session_id.rs  mod.rs  trace.rs
src/reqmodifier/: default_modifier.rs  mod.rs  modifer_apply.rs  reference.rs  restore.rs
src/utils/: any_error.rs  endpoint_join.rs  mod.rs  reqwest_response.rs  urls_display.rs
