[package]
name = "overlay-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
url = { version = "2.5", features = ["serde"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }

axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
axum-prometheus = "0.8.0"
axum-client-ip = "1.0.0"
axum-health = "0.1.2"

tokio = { version = "1.0", features = ["full"] }
http = { version = "1.0" }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12", features = ["guide"] }
jsonpath-rust = {version = "1.0", features = []}
json-patch = { version = "4" }

anyhow = "1.0"
oauth2 = { version = "5", features = ["reqwest"] }
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
openidconnect = { version = "4.0", features = ["reqwest"] }
jsonwebtoken = { version = "9.3", features = [] }
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["json", "env"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
redact = { version = "0.1", features = ["serde", "zeroize"] }
zeroize = { version = "1.7", features = ["std"] }
ipnet = { version = "2", features = ["serde"] }
async-stream = "0.3"
futures-util = { version = "0.3", features = [] }
