[package]
name = "overlay-mcp"
version = "0.5.4"
edition = "2021"

[dependencies]
async-trait = "0.1"
async-stream = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = [] }
futures-util = { version = "0.3", features = [] }

anyhow = { version = "1.0" }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }

hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
axum-prometheus = "0.8.0"
axum-client-ip = "1.0.0"
axum-health = "0.1.2"
rmcp = { version = "0.1", features = ["transport-sse"] }

http = { version = "1.0" }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

tracing-core = { version = "0.1", features = ["valuable"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
valuable = { version = "0.1", features = ["derive"] }

reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
eventsource-client = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12", features = ["guide"] }
jsonpath-rust = { version = "1.0", features = [] }
json-patch = { version = "4" }
form_urlencoded = { version = "1.2", features = [] }
redact = { version = "0.1", features = ["serde", "zeroize"] }
zeroize = { version = "1.7", features = ["std"] }
ipnet = { version = "2", features = ["serde"] }

oauth2 = { version = "5", features = ["reqwest"] }
openidconnect = { version = "4.0", features = ["reqwest"] }
jsonwebtoken = { version = "9.3", features = [] }

rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
enum_dispatch = "0.3"
strum = { version = "0.26.3", features = ["derive"] }
num-traits = "0.2"
hickory-resolver = "0.25.1"

figment = { version = "0.10", features = ["json", "env"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

hiqlite = { version = "0.5", default-features = false, features = [
    "cache",
    "dlock",
    "listen_notify",
] }
