[package]
name = "httpbuilder"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
http = { workspace = true }
form_urlencoded = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
# Add dependencies needed for tests, e.g., http mocking
