[package]
name = "openfga"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# Add dependencies needed for tests, e.g., http mocking
