[package]
name = "overlay-mcp-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
openfga = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
clap = { workspace = true }
ipnet = { workspace = true }
url = { workspace = true }
redact = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true }
axum-client-ip = { workspace = true }
hiqlite = { workspace = true }
http = { workspace = true }
httpbuilder = { workspace = true }
rmcp = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
mime = { workspace = true }
thiserror = { workspace = true }
jsonptr = { workspace = true }
reqwest = { workspace = true }
openidconnect = { workspace = true }
oauth2 = { workspace = true }
hickory-resolver = { workspace = true }
