[package]
name = "overlay-mcp-resolver"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
overlay-mcp-core = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
oauth2 = { workspace = true }
openidconnect = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
rmcp = { workspace = true }
httpbuilder = { workspace = true }
hickory-resolver = { workspace = true }
# Specific dependencies
